DTSBPS-687: fortify integration on nightly build (#491)